remake of the entire app